--- a/tdf/src/app/app.component.html
+++ b/tdf/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mb-5">
   <h1>Boot camp Enrolment Form</h1>
   <form #userForm="ngForm">
 
@@ -29,8 +29,10 @@
 
     <div class="form-group">
       <label>Name </label>
-      <input type="text" class="form-control" name="name" [(ngModel)]="userModel.name">
+      <input type="text" required #name class="form-control" name="name" [(ngModel)]="userModel.name">
     </div>
+     
+     {{name.className}}
     <div class="form-group">
       <label>Email </label>
       <input type="email" class="form-control" name="Email" [(ngModel)]="userModel.email">
