--- a/tdf/src/app/app.component.html
+++ b/tdf/src/app/app.component.html
@@ -29,10 +29,10 @@
 
     <div class="form-group">
       <label>Name </label>
-      <input type="text" required #name class="form-control" name="name" [(ngModel)]="userModel.name">
+      <input type="text" required #name="ngModel" class="form-control" [class.is-invalid]="name.invalid" name="name" [(ngModel)]="userModel.name">
     </div>
      
-     {{name.className}}
+    <!-- {{name.className}} -->
     <div class="form-group">
       <label>Email </label>
       <input type="email" class="form-control" name="Email" [(ngModel)]="userModel.email">
