--- a/tdf/src/app/app.component.html
+++ b/tdf/src/app/app.component.html
@@ -29,17 +29,25 @@
 
     <div class="form-group">
       <label>Name </label>
-      <input type="text" required #name="ngModel" class="form-control" [class.is-invalid]="name.invalid" name="name" [(ngModel)]="userModel.name">
+      <input type="text" required #name="ngModel" class="form-control" 
+            [class.is-invalid]="name.invalid && name.touched"  name="name" [(ngModel)]="userModel.name">
+            <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name Is required</small>
     </div>
      
-    <!-- {{name.className}} -->
+    <!-- {{name.className}} -->  
     <div class="form-group">
       <label>Email </label>
       <input type="email" class="form-control" name="Email" [(ngModel)]="userModel.email">
     </div>
     <div class="form-group">
       <label>Phone </label>
-      <input type="tel" class="form-control" name="Phone" [(ngModel)]="userModel.phone">
+      <input type="tel" #phone="ngModel" pattern="^\d{10}$" required class="form-control" 
+      [class.is-invalid]="phone.invalid && phone.touched" name="Phone" [(ngModel)]="userModel.phone">
+      <div *ngIf="phone.errors && (phone.invalid || phone.touched)">
+        <small class="text-danger" *ngIf="phone.errors.required">Phone number is required</small>
+        <small class="text-danger" *ngIf="phone.errors.pattern">Phone number must be 10 digits</small>
+      </div>
+
     </div>
     <div class="form-group">
       <select class="custom-select" name="Topic" [(ngModel)]="userModel.topic">
@@ -47,7 +55,7 @@
         <option *ngFor= "let topic of topics">{{topic}}</option>
       </select>
     </div>
- <button class="btn btn-primary" type="submit">Submit Form </button>
+ <button [disabled]="userForm.form.invalid" class="btn btn-primary" type="submit">Submit Form </button>
 
 </form>
 
