--- a/tdf/src/app/app.component.html
+++ b/tdf/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mb-5">
   <h1>Boot camp Enrolment Form</h1>
-  <form #userForm="ngForm">
+  <form #userForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
 
   {{userForm.value | json}}
   <hr>
